# C-WoWBot

./: .cursorignore  .gitignore  CMakeLists.txt  botanalysis.txt  hook.cpp  log.h  objectmanager.h  wowobject.h
src/bot/core/: BotController.cpp  BotController.h  MovementController.cpp  MovementController.h  RotationStep.h
src/bot/engine/: GrindingEngine.cpp  GrindingEngine.h
src/bot/pathing/: PathManager.cpp  PathManager.h  PathRecorder.cpp  PathRecorder.h
src/core/: dllmain.cpp  hook.cpp  hook.h
src/game/: functions.cpp  functions.h  objectmanager.cpp  objectmanager.h  spell_info.h  spellmanager.cpp  spellmanager.h  wowobject.cpp  wowobject.h
src/gui/: bot_tab.cpp  bot_tab.h  gui.cpp  gui.h  log_tab.cpp  log_tab.h  main_tab.cpp  main_tab.h  objects_tab.cpp  objects_tab.h  spells_tab.cpp  spells_tab.h
src/lua/: lua_executor.cpp  lua_executor.h  wow_lua_api.cpp  wow_lua_api.h
src/utils/: log.cpp  log.h  memory.h
